# ChineseChess

./: .gitignore  BoardEvaluation.cpp  BoardEvaluation.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessPiece.h  Policy.cpp  Policy.h  README-en.md  README.md  Resource.qrc  Widget.cpp  Widget.h  Widget.ui  Worker.cpp  Worker.h  main.cpp
chessboard/: chessboard.txt
